# OperatingSystems

./: README.md
Lab_1/: CMakeLists.txt  README.md  build.sh  config.txt
Lab_1/include/: config.h  daemon.h
Lab_1/src/: config.cpp  daemon.cpp  main.cpp
Lab_2/: CMakeLists.txt  build.sh
Lab_2/client/: client.cpp  client.h  goat.h  main.cpp
Lab_2/conn/: conn.h  conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_mq.h  conn_shm.cpp  conn_shm.h
Lab_2/host/: client_info.h  host.cpp  host.h  main.cpp  wolf.h
Lab_2/utils/: utils.cpp  utils.h
